--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
+
+    <!--HEADER -->
     <header>
       <div class="logo">
         <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
@@ -17,5 +19,19 @@
       </div>
     </header>
 
+    <!--MAIN-->
+    <main>
+
+    </main>
+
+    <!--FOOTER -->
+    <footer>
+      <div class="contacts">
+        <h3>The Tea Cozy</h3>
+        <h5>contact@the teacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <h5 class="copyright">copyright The Tea Cozy 2017</h5>
+    </footer>
   </body>
 </html>
