--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
 
     <!--MAIN-->
     <main>
+      <div class="mission">
+        <div class="text-content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+
+      </div>
+      <div class="teas">
+
+      </div>
+      <div class="locations">
+
+      </div>
 
     </main>
 
