--- a/index.html
+++ b/index.html
@@ -21,16 +21,55 @@
 
     <!--MAIN-->
     <main>
+
+      <!--MISSION-->
       <div class="mission">
         <div class="text-content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
+      </div>
+
+      <!--TEAS OF THE MONTH-->
+      <div class="tea_month">
+        <div class="text-content">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+        <div class="teas">
+          <div class="tea">
+            <img src="./resources/images/img-berryblitz.jpg" alt="Berry tea">
+            <h3>Fall Berry Blitz Tea</h3>
+
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-berryblitz.jpg" alt="Tea in a box">
+            <h3>Spiced Rum Tea</h3>
+
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-donut.jpg" alt="Donut">
+            <h3>Seasonal Donuts</h3>
+
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-myrtle-ave.jpg" alt="Cup of tea">
+            <h3>Myrtle Ave Tea</h3>
+
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-bedford-bizarre.jpg" alt="Tea and sugar">
+            <h3>Bedford Bizarre Tea</h3>
+
+          </div>
+
+
+        </div>
+
 
       </div>
-      <div class="teas">
 
-      </div>
+      <!--LOCATIONS-->
       <div class="locations">
 
       </div>
