--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Tea Cozy</title>
+    <link rel="stylesheet" href="resources/css/style.css">
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Tea Cozy">
+      </div>
+      <nav>
+        <span><a href="#">Mission</a></span>
+        <span><a href="#">Featered Tea</a></span>
+        <span><a href="#">Locations</a></span>
+      </nav>
+    </header>
 
+
+  </body>
+</html>
