--- a/index.html
+++ b/index.html
@@ -16,7 +16,33 @@
         <span><a href="#">Locations</a></span>
       </nav>
     </header>
+    <main>
+      <div class="mission">
+        <div class="text-content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+      <div class="teas">
+        <div class="text-content">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at the Tea Cozy?</h4>
+        </div>
+        <div class="image-content">
+          <img src="" alt="">
+          <h4>Fall Berry Blitz Tea</h4>
+          <img src="" alt="">
+          <h4>Spiced Rum Tea</h4>
+          <img src="" alt="">
+          <h4>Seasonal Donuts</h4>
+          <img src="" alt="">
+          <h4>Myrtle Ave Tea</h4>
+          <img src="" alt="">
+          <h4>Bedford Bizzare Tea</h4>
 
+        </div>
+      </div>
+    </main>
 
   </body>
 </html>
