--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Tea Cozy">
       </div>
       <nav>
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featered Tea</a></span>
-        <span><a href="#">Locations</a></span>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#teas">Featered Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
       </nav>
     </header>
     <main>
-      <div class="mission">
+
+<!--MISSION-->
+
+      <div class="mission" id="mission">
         <div class="text-content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
-      <div class="teas">
+
+<!--TEAS-->
+
+      <div class="teas" id="teas">
         <div class="text-content">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at the Tea Cozy?</h4>
@@ -52,10 +58,48 @@
               <h4>Bedford Bizzare Tea</h4>
             </div>
           </div>
+      </div>
 
+<!-- LOCATIONS-->
 
+      <div class="places" id="locations">
+        <h2>Locations</h2>
+        <div class="locations">
+          <div class="location">
+            <h3>Downtown</h3>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland. Maine</h4>
+          </div>
+          <div class="location">
+            <h3>East Bayside</h3>
+            <h4>3433 Phisherman's Avenue</h4>
+            <h4>(Northwest Corner)</h4>
+            <h4>Portland. Maine</h4>
+          </div>
+          <div class="location">
+            <h3>Oakdale</h3>
+            <h4>515 Crescent Avenue</h4>
+            <h4>Second Floor</h4>
+            <h4>Portland. Maine</h4>
+          </div>
         </div>
+
+
+      </div>
     </main>
 
+  <!--FOOTER-->
+
+    <footer>
+      <div class="info">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <div class="copyright">
+        <h5>copyright The Tea Cozy 2017</h5>
+      </div>
+    </footer>
   </body>
 </html>
